# manimo

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: ANIMATIONS.md  REVEAL.md  SLIDES.md
src/manimo/: __init__.py  __main__.py  anim.py  colors.py  reveal.py  scaffold.py
src/manimo/theme/: _slide_head.html  _slide_theme.css
tests/: test_slides.py
