[project]
description = "Turn marimo notebooks into reveal.js slide decks with Manim (SVG) and Altair chart assets."
name = "manimo"
requires-python = ">=3.10"
version = "0.1.2"
dependencies = [
  "marimo>=0.18.4",
  "altair>=5.5.0",
  "tol-colors>=2.0",
  "manim>=0.18",
  "manim-mobject-svg>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/manimo"]

[dependency-groups]
dev = [
  "ipython>=8.31.0",
  "prek>=0.2.22",
  "ruff>=0.8.3",
  "ty>=0.0.1a10",
]
test = [
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
]

[tool.pytest.ini_options]
pythonpath = ["./src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["manimo"]
omit = [
  "*/tests/*",
  "*/__pycache__/*",
  "*/.venv/*",
  # anim.py's render paths need system cairo/pango (and LaTeX for Tex/MathTex) and
  # aren't exercised in unit tests.
  "*/manimo/anim.py",
]

[tool.coverage.report]
fail_under = 90
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = 'py310'
line-length = 88
indent-width = 2

[tool.ruff.lint]
select = ["D", "E", "F", "I", "N", "UP"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
force-single-line = true
